# universal-ambient-light

./: .gitignore  LICENSE.txt  README.md  README_RU.md  SUPPORT.md  THIRD_PARTY_LICENSES.md  build.gradle.kts  gradle.properties  privacy-policy.md  settings.gradle.kts
.github/workflows/: manual_release.yml  stale.yml
adalight-sketch/: adalight-sketch.ino
app/: build.gradle.kts
app/src/debug/: AndroidManifest.xml
app/src/full/: AndroidManifest.xml
app/src/full/java/com/vasmarfas/UniversalAmbientLight/common/: AccessibilityCaptureService.kt  AccessibilityEncoder.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/vasmarfas/UniversalAmbientLight/: AmbilightApplication.kt  MainActivity.kt  QuickTileService.kt
app/src/main/java/hyperionnet/: Clear.kt  Color.kt  Command.kt  Image.kt  ImageType.kt  RawImage.kt  Register.kt  Reply.kt  Request.kt
app/src/main/jni/: CMakeLists.txt  mtk_thal_capture_server.c
app/src/main/res/drawable/: ic_notification_icon.xml
app/src/main/res/values/: pref_values.xml  strings.xml  styles.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/xml/: accessibility_service_config.xml  file_paths.xml  usb_device_filter.xml
app/src/playstore/res/values/: arrays.xml
app/src/playstore/res/values-ru/: arrays.xml
app/src/test/java/com/hyperion/grabber/: ExampleUnitTest.kt
common/src/main/res/values/: pref_values.xml  strings.xml
common/src/main/res/xml/: pref_general.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+69 files in other folders)
